src/snapshots/tests__thf_mapping_type.snap
---
source: src/tests.rs
expression: parsed
---
ThfMappingType(
    [
        ThfUnitaryType(
            Atomic(
                Plain(
                    Constant(
                        Constant(
                            Functor(
                                Lower(
                                    LowerWord(
                                        "c",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
        ThfUnitaryType(
            Atomic(
                Plain(
                    Constant(
                        Constant(
                            Functor(
                                Lower(
                                    LowerWord(
                                        "d",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ],
)
