src/snapshots/tests__thf_or_formula-3.snap
---
source: src/tests.rs
expression: parsed
---
ThfOrFormula(
    [
        Unitary(
            Atomic(
                Plain(
                    Constant(
                        Constant(
                            Functor(
                                Lower(
                                    LowerWord(
                                        "c",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
        Unitary(
            Atomic(
                Plain(
                    Constant(
                        Constant(
                            Functor(
                                Lower(
                                    LowerWord(
                                        "d",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
        Unitary(
            Atomic(
                Plain(
                    Constant(
                        Constant(
                            Functor(
                                Lower(
                                    LowerWord(
                                        "e",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ],
)
