src/snapshots/tests__thf_plain_atomic.snap
---
source: src/tests.rs
expression: parsed
---
Constant(
    Constant(
        Functor(
            Lower(
                LowerWord(
                    "c",
                ),
            ),
        ),
    ),
)
