src/snapshots/tests__thf_quantification.snap
---
source: src/tests.rs
expression: parsed
---
ThfQuantification {
    quantifier: Fof(
        Forall,
    ),
    variable_list: ThfVariableList(
        [
            ThfTypedVariable {
                variable: Variable(
                    UpperWord(
                        "X",
                    ),
                ),
                typ: Unitary(
                    ThfUnitaryType(
                        Atomic(
                            Plain(
                                Constant(
                                    Constant(
                                        Functor(
                                            Lower(
                                                LowerWord(
                                                    "t",
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            },
        ],
    ),
}
