src/snapshots/tests__thf_quantifier_formula.snap
---
source: src/tests.rs
expression: parsed
---
ThfQuantifiedFormula {
    quantification: ThfQuantification {
        quantifier: Fof(
            Forall,
        ),
        variable_list: ThfVariableList(
            [
                ThfTypedVariable {
                    variable: Variable(
                        UpperWord(
                            "X",
                        ),
                    ),
                    typ: Unitary(
                        ThfUnitaryType(
                            Atomic(
                                Plain(
                                    Constant(
                                        Constant(
                                            Functor(
                                                Lower(
                                                    LowerWord(
                                                        "t",
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                },
            ],
        ),
    },
    formula: Unitary(
        Atomic(
            Plain(
                Constant(
                    Constant(
                        Functor(
                            Lower(
                                LowerWord(
                                    "p",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
}
