src/snapshots/tests__thf_top_level_type-3.snap
---
source: src/tests.rs
expression: parsed
---
Mapping(
    ThfMappingType(
        [
            ThfUnitaryType(
                Atomic(
                    Plain(
                        Constant(
                            Constant(
                                Functor(
                                    Lower(
                                        LowerWord(
                                            "c",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
            ThfUnitaryType(
                Atomic(
                    Plain(
                        Constant(
                            Constant(
                                Functor(
                                    Lower(
                                        LowerWord(
                                            "d",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ],
    ),
)
