src/snapshots/tests__thf_top_level_type-5.snap
---
source: src/tests.rs
expression: parsed
---
Apply(
    ThfApplyType(
        ThfApplyFormula(
            [
                Unitary(
                    Atomic(
                        Plain(
                            Constant(
                                Constant(
                                    Functor(
                                        Lower(
                                            LowerWord(
                                                "c",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
                Unitary(
                    Atomic(
                        Plain(
                            Constant(
                                Constant(
                                    Functor(
                                        Lower(
                                            LowerWord(
                                                "d",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ],
        ),
    ),
)
