src/snapshots/tests__thf_top_level_type.snap
---
source: src/tests.rs
expression: parsed
---
Unitary(
    ThfUnitaryType(
        Atomic(
            Plain(
                Constant(
                    Constant(
                        Functor(
                            Lower(
                                LowerWord(
                                    "c",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
