src/snapshots/tests__thf_typed_variable.snap
---
source: src/tests.rs
expression: parsed
---
ThfTypedVariable {
    variable: Variable(
        UpperWord(
            "X",
        ),
    ),
    typ: Unitary(
        ThfUnitaryType(
            Atomic(
                Plain(
                    Constant(
                        Constant(
                            Functor(
                                Lower(
                                    LowerWord(
                                        "t",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
}
