src/snapshots/tests__thf_unary_formula.snap
---
source: src/tests.rs
expression: parsed
---
Infix(
    ThfInfixUnary {
        left: Atomic(
            Plain(
                Constant(
                    Constant(
                        Functor(
                            Lower(
                                LowerWord(
                                    "c",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
        op: InfixInequality,
        right: Atomic(
            Plain(
                Constant(
                    Constant(
                        Functor(
                            Lower(
                                LowerWord(
                                    "d",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    },
)
